volexc/tests/ui/check_duplicate_message.out
Error: duplicate definition of `Bar`
   ╭─[check_duplicate_message.vol:2:9]
   │
 2 │ message Bar {
   │         ─┬─  
   │          ╰─── first defined here
   │ 
 6 │ message Bar {
   │         ─┬─  
   │          ╰─── redefined here
───╯