volexc/tests/ui/check_duplicate_message.vol
// Duplicate message definition
message Bar {
    x: u32 = 1;
}

message Bar {
    y: u64 = 1;
}
